--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,7 +13,17 @@ ion-card ion-img {
   object-fit: contain;
 }
 
+.img-poke{
+  filter: drop-shadow(0 35px 10px rgba(0, 0, 0, 0.5)); 
+}
+
 ion-card {
-  margin: 15px auto;
+  margin: 10px auto;
   width: 90%;
+}
+
+@media screen and (min-width: 768px) {
+  ion-card{
+    width: 450px;
+  }
 }
